--- a/lib/templates/index.html
+++ b/lib/templates/index.html
@@ -15,12 +15,72 @@
       </div>
     </nav>
 
-    <!-- отсюда можно удалять -->
-    <div class="container">
-      <p class="text-center">Шаблон подключился! Теперь на его базе можно начинать делать веб приложение.</p>
-      <p class="text-center">Удали этот блок и скопируй сюда содержимое тега <code>body</code> из домашнего задания с занятия 2.</p>
-    </div>
-    <!-- всё что ниже лучше оставить -->
+    <h2 class="display-1 text-center mb-4">Извлечение текста из фото</h2>
+        {% if error and error_type %}
+        <div class="container col-8">
+            <div class="alert alert-danger" role="alert">
+                Тип ошибки: {{ error_type }}<br/>
+                Текст ошибки: {{ error }} <br/>
+            </div>
+        </div>
+        {% endif %}
+
+        {% if image %}
+        <div class="container text-center mb-3 col-8">
+            <img class="img-fluid rounded-3" src="{{ image }}"/>
+        </div>
+        {% endif %}
+
+        <div class="container mb-3 col-8">
+            <form class="border border-2 p-3 rounded-4" method="POST" enctype="multipart/form-data">
+                <div class="mb-3">
+                    <label for="formFile" class="form-label">Вставьте изображение .jpeg
+                        для распознавания текста</label>
+                    <input class="form-control" type="file" accept="image/png, image/jpeg, image/jpg" name="image" id="formFile">
+                    <br/>
+                    <label for="accuracy" class="form-label">Будут выведены распознанные слова, у которых точность выше заданной:</label>
+                    <input class="form-control" type="number" step="0.05" min="0" max="1" value="0.5" id="accuracy" name="accuracy"/>
+                    <br/>
+                    <label for="sorted">Сортировать результат по убыванию точности</label>
+                    <input type="checkbox" id="sorted" name="is_sorted" checked/>
+                </div>
+                <button type="submit" class="btn btn-primary">распознать</button>
+            </form>
+        </div>
+        <div class="container col-8">
+            {% if words %}
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">Изображение</th>
+                        <th scope="col">Слово</th>
+                        <th scope="col">Точность</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for word in words %}
+                        <tr>
+                            <td><img src="{{ word.image }}" /></td>
+                            <td>{{ word.word }}</td>
+                            <td class="{% if word.accuracy > 0.90 %}
+                                        table-success
+                                        {% elif word.accuracy > 0.70 %}
+                                        table-warning
+                                        {% else %}
+                                        table-danger
+                                        {% endif %}">
+                                {{ "%2.2f" | format(word.accuracy * 100) }}%
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+            {% else %}
+            <p class="text-center text-muted">Будет представлена таблица с частями распознанного изображения,
+                словом и точностью
+            </p>
+            {% endif %}
+        </div>
 
     <footer class="container mt-5">
         <p class="text-center text-muted">© 2024 Академия Аналитиков Авито</p>
